ciu namespacing tiny `boxClass` tweak fixed package main

--- a/src/style.sass
+++ b/src/style.sass
@@ -1,7 +1,7 @@
 $display-background-color: #dddddd
 $clock-icon-stroke-color: #999
 
-.mithril-timepicker
+.ciu-mithril-timepicker
 	position: relative
 	display: inline-block
 	min-width: 100px
