--- a/src/style.css
+++ b/src/style.css
@@ -1,108 +1,140 @@
-.mithril-timepicker {
+.ciu-mithril-timepicker {
+  font-family: "Source Code Pro", monaco, monospace;
   position: relative;
-  display: inline-block;
-  min-width: 100px;
-  min-height: 40px;
-  background: #dddddd;
-  user-select: none; }
-  .mithril-timepicker * {
-    box-sizing: border-box;
-    font-family: Monaco, monospace;
+  width: 120px;
+  height: 40px; }
+  .ciu-mithril-timepicker * {
+    box-sizing: border-box; }
+  .ciu-mithril-timepicker .display {
+    position: absolute;
+    display: flex;
+    width: 120px;
+    height: 40px;
+    background: #dddddd;
+    padding: 0 8px;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    line-height: 20px;
+    transition: 0.2s ease-out;
     cursor: pointer; }
-  .mithril-timepicker .overlay {
+  .ciu-mithril-timepicker .display-num {
+    position: relative;
+    display: inline-block;
+    padding: 2px;
+    border: 1px solid transparent;
+    border-radius: 7px;
+    color: black;
+    transition: border-color 0.2s ease-out, padding 0.2s ease-out, color 0.2s ease-out; }
+  .ciu-mithril-timepicker .display-num:hover {
+    text-decoration: underline;
+    cursor: pointer; }
+  .ciu-mithril-timepicker.editing {
+    z-index: 99999999999; }
+    .ciu-mithril-timepicker.editing .display {
+      position: absolute;
+      width: 250px;
+      height: 90px;
+      font-size: 36px;
+      line-height: 36px;
+      background: black;
+      color: white; }
+    .ciu-mithril-timepicker.editing .display-num {
+      border: 1px solid white;
+      padding: 10px;
+      color: white; }
+      .ciu-mithril-timepicker.editing .display-num.current {
+        background: white;
+        color: black;
+        text-decoration: underline; }
+    .ciu-mithril-timepicker.editing #r {
+      margin-left: 10px; }
+    .ciu-mithril-timepicker.editing .wrapper {
+      top: 90px;
+      width: 250px; }
+  .ciu-mithril-timepicker .overlay {
     position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh; }
-  .mithril-timepicker .display {
-    position: relative;
-    height: 40px;
-    padding: 8px;
+  .ciu-mithril-timepicker .wrapper {
+    position: absolute;
+    top: 40px;
+    left: 0;
+    width: 120px;
+    height: 0;
+    background: #dddddd;
+    overflow: hidden;
+    transition: 0.2s ease-out; }
+    .ciu-mithril-timepicker .wrapper.h, .ciu-mithril-timepicker .wrapper.m.i5 {
+      height: 90px; }
+    .ciu-mithril-timepicker .wrapper.h.tfh {
+      height: 170px; }
+    .ciu-mithril-timepicker .wrapper.m.i15, .ciu-mithril-timepicker .wrapper.r {
+      height: 50px; }
+  .ciu-mithril-timepicker .sled {
+    position: absolute;
+    top: 0;
+    width: 750px;
+    height: 100%;
+    transition: 0.2s ease-out;
+    display: flex; }
+  .ciu-mithril-timepicker .h .sled {
+    left: 0; }
+  .ciu-mithril-timepicker .m .sled {
+    left: -250px; }
+  .ciu-mithril-timepicker .r .sled {
+    left: -500px; }
+  .ciu-mithril-timepicker .editor {
+    padding: 5px;
+    width: 250px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: flex-start; }
+  .ciu-mithril-timepicker .box {
+    width: 35px;
+    height: 35px;
+    margin: 2.5px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 16px; }
-  .mithril-timepicker .clock {
+    border: 1px solid black;
+    border-radius: 3px;
+    cursor: pointer;
+    background: transparent; }
+    .ciu-mithril-timepicker .box.current {
+      background: greenyellow; }
+  .ciu-mithril-timepicker .r .box {
+    width: 45%; }
+  .ciu-mithril-timepicker .m.i15 .box {
+    width: 22%; }
+  .ciu-mithril-timepicker .clock {
     position: absolute;
     left: 5px;
     top: 50%;
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    border: 1px solid #999;
+    border: 1px solid #444444;
+    background: transparent;
+    overflow: hidden;
     transform: translateY(-50%); }
-    .mithril-timepicker .clock:before, .mithril-timepicker .clock:after {
-      content: "";
-      position: absolute;
-      top: 15px;
-      left: 14px;
-      height: 1px;
-      background: #999;
-      transform-origin: left center; }
-    .mithril-timepicker .clock:before {
-      width: 45%;
-      transform: rotate(-90deg); }
-    .mithril-timepicker .clock:after {
-      width: 30%;
-      transform: rotate(15deg); }
-  .mithril-timepicker .num {
-    border: 1px solid transparent;
-    border-radius: 6px;
-    transition: 0.2s; }
-    .mithril-timepicker .num:hover {
-      text-decoration: underline; }
-  .mithril-timepicker .current {
-    background: black;
-    color: white; }
-  .mithril-timepicker .editor {
+  .ciu-mithril-timepicker .clock:before, .ciu-mithril-timepicker .clock:after {
+    content: "";
     position: absolute;
-    top: 100%;
-    left: 0;
-    padding: 5px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    width: 250px; }
-    .mithril-timepicker .editor.meridian .box {
-      width: 47%; }
-  .mithril-timepicker .box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 35px;
-    margin: 2.5px;
-    padding: 8px 0;
-    border: 1px solid black;
-    font-size: 0.8em; }
-  .mithril-timepicker .i15 .box {
-    width: 22%; }
-  .mithril-timepicker.editing {
-    box-shadow: 0 2px 5px 0 black; }
-    .mithril-timepicker.editing .overlay, .mithril-timepicker.editing .display, .mithril-timepicker.editing .editor {
-      z-index: 999999; }
-    .mithril-timepicker.editing .display {
-      height: 80px;
-      width: 250px;
-      background: black;
-      color: white; }
-    .mithril-timepicker.editing .num {
-      display: inline-block;
-      width: 35%;
-      padding: 10px;
-      border: 1px solid white;
-      color: white;
-      font-size: 2em;
-      text-align: center; }
-      .mithril-timepicker.editing .num.current {
-        background: white;
-        color: black; }
-    .mithril-timepicker.editing .tfh .num {
-      width: 48%; }
-    .mithril-timepicker.editing #r {
-      margin-left: 10px; }
-    .mithril-timepicker.editing .editor {
-      background: #dddddd;
-      box-shadow: 0 2px 5px 0 black; }
+    top: 15px;
+    left: 14px;
+    height: 1px;
+    background: #444444;
+    transform-origin: left center;
+    z-index: 1000; }
+  .ciu-mithril-timepicker .clock:before {
+    width: 45%;
+    transform: rotate(-90deg); }
+  .ciu-mithril-timepicker .clock:after {
+    width: 30%;
+    transform: rotate(15deg); }
 
 /*# sourceMappingURL=style.css.map */
